<resources>
    <string name="app_name">Book Store</string>
    <string name="title_placeholder">Title</string>
    <string name="author_placeholder">Author</string>
    <string name="price_placeholder">0.00</string>
    <string name="code_placeholder">0000</string>
    <string name="description_placeholder">This is the description</string>

    <string-array name="book_genres">
        <item>Fantasy</item>
        <item>Fantasy</item>
        <item>Fantasy</item>
        <item>Fantasy</item>
        <item>Classic</item>
        <item>Classic</item>
        <item>Classic</item>
        <item>Horror</item>
        <item>Horror</item>
        <item>Horror</item>
    </string-array>

    <string-array name="book_titles">
        <item>The Hobbit</item>
        <item>Eragon</item>
        <item>A Wizard of Earthsea</item>
        <item>Gardens of the Moon</item>
        <item>Oliver Twist</item>
        <item>Emma</item>
        <item>Moby-Dick</item>
        <item>It</item>
        <item>The Shining</item>
        <item>Dracula</item>
    </string-array>

    <string-array name="book_authors">
        <item>J. R. R. Tolkien</item>
        <item>Christopher Paolini</item>
        <item>Ursula K. Le Guin</item>
        <item>Steven Erikson</item>
        <item>Charles Dickens</item>
        <item>Jane Austen</item>
        <item>Herman Melville</item>
        <item>Stephen King</item>
        <item>Stephen King</item>
        <item>Bram Stoker</item>
    </string-array>

    <string-array name="book_codes">
        <item>0001</item>
        <item>0002</item>
        <item>0003</item>
        <item>0004</item>
        <item>0005</item>
        <item>0006</item>
        <item>0007</item>
        <item>0008</item>
        <item>0009</item>
        <item>0010</item>
    </string-array>

    <string-array name="book_descriptions">
        <item>The Hobbit follows the quest of home-loving Bilbo Baggins, the titular hobbit, to win a share of the treasure guarded by Smaug the dragon.</item>
        <item>The book tells the story of a farm boy named Eragon, who finds a mysterious stone in the mountains. The stone is revealed to be a dragon egg, and a dragon he later names Saphira hatches from it. When the evil King Galbatorix finds out about the egg, he sends monstrous servants to acquire it, making Eragon and Saphira flee from their hometown with a storyteller named Brom. Brom, an old member of an extinct group called the Dragon Riders, teaches Eragon about \'The Ways of the Rider.\'</item>
        <item>A Wizard of Earthsea centers around a young mage named Ged, born in a village on the island of Gont. He displays great power while still a boy and joins the school of wizardry, where his prickly nature drives him into conflict with one of his fellows. During a magical duel, Ged\'s spell goes awry and releases a shadow creature that attacks him. The novel follows his journey as he seeks to be free of the creature.</item>
        <item>Gardens of the Moon centres around the Imperial campaign to conquer the city of Darujhistan on the continent of Genabackis.</item>
        <item>Oliver Twist centres on orphan Oliver Twist, born in a workhouse and sold into apprenticeship with an undertaker.</item>
        <item>Emma is set in the fictional country village of Highbury and the surrounding estates of Hartfield, Randalls and Donwell Abbey, and involves the relationships among people from a small number of families.</item>
        <item>Moby-Dick is the sailor Ishmael\'s narrative of the obsessive quest of Ahab, captain of the whaling ship Pequod, for revenge on Moby-Dick, the giant white sperm whale that on the ship\'s previous voyage bit off Ahab\'s leg at the knee.</item>
        <item>It follows the experiences of seven children as they are terrorized by an evil entity that exploits the fears of its victims to disguise itself while hunting its prey.</item>
        <item>The Shining centers on the life of Jack Torrance, a struggling writer and recovering alcoholic who accepts a position as the off-season caretaker of the historic Overlook Hotel in the Colorado Rockies. Soon, after a winter storm leaves him and his family snowbound, the supernatural forces inhabiting the hotel influence Jack\'s sanity, leaving his wife and son in incredible danger.</item>
        <item>The novel tells the story of Dracula\'s attempt to move from Transylvania to England so that he may find new blood and spread the undead curse, and of the battle between Dracula and a small group of people led by Professor Abraham Van Helsing.</item>
    </string-array>

    <string-array name="book_prices">
        <item>14.90</item>
        <item>85.00</item>
        <item>40.00</item>
        <item>80.00</item>
        <item>17.90</item>
        <item>24.90</item>
        <item>19.90</item>
        <item>63.50</item>
        <item>45.00</item>
        <item>9.90</item>
    </string-array>

    <string-array name="book_images">
        <item>@drawable/the_hobbit</item>
        <item>@drawable/eragon</item>
        <item>@drawable/a_wizard_of_earthsea</item>
        <item>@drawable/gardens_of_the_moon</item>
        <item>@drawable/oliver_twist</item>
        <item>@drawable/emma</item>
        <item>@drawable/moby_dick</item>
        <item>@drawable/it</item>
        <item>@drawable/the_shining</item>
        <item>@drawable/dracula</item>
    </string-array>
</resources>
